Updated relative paths

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="./style1.css">
 </head>
 <body>
     <div class="container">
@@ -14,8 +14,8 @@
         </div>
         <div class="selectArea">
             <div class="select1">
-                <img src="speaker.svg" alt="sepaker" class="speaker" id="from">
-                <img src="copy.svg" alt="copy" class="copy" id="from">
+                <img src="./speaker.svg" alt="sepaker" class="speaker" id="from">
+                <img src="./copy.svg" alt="copy" class="copy" id="from">
                 <select name="" id="fselect">
                     <option values="en-GB">English</option>
                     <option values="hi-IN">Hindi</option>
@@ -24,8 +24,8 @@
             </div>
 
             <div class="select2">
-                <img src="speaker.svg" alt="" class="speaker" id="to">
-                <img src="copy.svg" alt="" class="copy" id="to">
+                <img src="./speaker.svg" alt="" class="speaker" id="to">
+                <img src="./copy.svg" alt="" class="copy" id="to">
                 <select name="" id="sselect">
                     <option values="en-GB">English</option>
                     <option values="hi-IN">Hindi</option>
@@ -35,7 +35,7 @@
         </div>
         <button id="transfer">Translate</button>
     </div>
-    <script src="countries.js"></script>
-    <script src="script.js"></script>
+    <script src="./countries.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
